karnc/tests/fixtures/positive/99_cross_context_with_money/src/commerce/payment.karn
context commerce.payment

uses commerce.money

exports opaque { Token }

type Token = opaque String where Matches("T-[0-9]+")

service authorise {
  on call(amount: Money) -> Effect[Result[Token, Int]] {
    Effect.pure(Ok(Token.unsafe("T-1")))
  }
}
