karnc/tests/fixtures/negative/58_external_construction/src/commerce/orders.karn
context commerce.orders {
  consumes commerce.payment

  fn makeAuth(s: String) -> Result[AuthId, ValidationError] {
    AuthId.of(s)
  }
}
